# Krusty

./: AUDIT_TODO.md  CLAUDE.md  KRAB.md  README.md
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD
crates/krusty-cli/: Cargo.toml
crates/krusty-cli/src/: main.rs
crates/krusty-cli/src/tui/: app.rs  app_builder.rs  auth.rs  mod.rs
crates/krusty-cli/src/tui/blocks/: bash.rs  build.rs  explore.rs  read.rs  terminal_pane.rs  thinking.rs  tool_result.rs  web_search.rs  write.rs
crates/krusty-cli/src/tui/blocks/edit/: block.rs  render.rs
crates/krusty-cli/src/tui/components/: decision_prompt.rs  mod.rs  plan_sidebar.rs  plugin_window.rs  scrollbars.rs  status_bar.rs  toast.rs  toolbar.rs
crates/krusty-cli/src/tui/handlers/: commands.rs  event_loop.rs  hit_test.rs  keyboard.rs  models.rs  mouse.rs  pinch.rs  provider.rs  scrollbar.rs  selection.rs  sessions.rs  stream_events.rs  streaming.rs  themes.rs  update.rs
crates/krusty-cli/src/tui/handlers/popup_keys/: auth.rs  file_preview.rs  hooks.rs  mcp.rs  mod.rs  pinch.rs  process.rs  skills.rs
crates/krusty-cli/src/tui/handlers/rendering/: mod.rs  scroll_calc.rs  views.rs
crates/krusty-cli/src/tui/handlers/rendering/messages/: mod.rs
crates/krusty-cli/src/tui/handlers/streaming/: context_building.rs  mod.rs  tool_execution.rs
crates/krusty-cli/src/tui/input/multi_line/: mod.rs  patterns.rs  renderer.rs  viewport.rs
crates/krusty-cli/src/tui/markdown/: cache.rs  renderer.rs
crates/krusty-cli/src/tui/plugins/: brick_breaker.rs  gamepad.rs  libretro.rs  mod.rs  retroarch.rs
crates/krusty-cli/src/tui/plugins/visualizer/: audio.rs  mod.rs
crates/krusty-cli/src/tui/polling/: blocks.rs  dual_mind.rs  mod.rs
crates/krusty-cli/src/tui/popups/: auth.rs  common.rs  mod.rs  pinch.rs  scroll.rs  session_list.rs
crates/krusty-cli/src/tui/state/: chat.rs  layout.rs  mod.rs  scroll.rs  scroll_system.rs  selection.rs
crates/krusty-cli/src/tui/themes/: registry.rs
crates/krusty-cli/src/tui/utils/: channels.rs  languages.rs  mod.rs
crates/krusty-core/: Cargo.toml
crates/krusty-core/src/: constants.rs  lib.rs
crates/krusty-core/src/acp/: agent.rs  bridge.rs  error.rs  mod.rs  model_manager.rs  processor.rs  server.rs  session.rs  tools.rs  updates.rs  workspace_context.rs
crates/krusty-core/src/agent/: build_context.rs  cache.rs  constants.rs  mod.rs  subagent.rs  summarizer.rs  user_hooks.rs
crates/krusty-core/src/agent/dual_mind/: dialogue.rs  little_claw.rs  mod.rs  observation.rs  roles.rs
crates/krusty-core/src/agent/subagent/: execution.rs  mod.rs  tools.rs
crates/krusty-core/src/ai/: format_detection.rs  glm.rs  mod.rs  models.rs  opencodezen.rs  openrouter.rs  providers.rs  sse.rs  stream_buffer.rs  title.rs  transform.rs
crates/krusty-core/src/ai/anthropic/: client.rs
crates/krusty-core/src/ai/client/: config.rs  core.rs  mod.rs  request_builder.rs  simple.rs  streaming.rs  tools.rs
crates/krusty-core/src/ai/format/: anthropic.rs  google.rs  mod.rs  openai.rs  response.rs
crates/krusty-core/src/ai/parsers/: google.rs  mod.rs
crates/krusty-core/src/ai/retry/: backoff.rs
crates/krusty-core/src/auth/: mod.rs  storage.rs
crates/krusty-core/src/extensions/wasm_host/wit/: since_v0_0_6.rs  since_v0_1_0.rs  since_v0_2_0.rs  since_v0_3_0.rs  since_v0_4_0.rs  since_v0_5_0.rs  since_v0_6_0.rs  since_v0_8_0.rs
crates/krusty-core/src/extensions/wit/since_v0.0.6/: extension.wit
crates/krusty-core/src/extensions/wit/since_v0.1.0/: extension.wit
crates/krusty-core/src/extensions/wit/since_v0.2.0/: extension.wit
crates/krusty-core/src/extensions/wit/since_v0.3.0/: extension.wit
crates/krusty-core/src/extensions/wit/since_v0.4.0/: extension.wit
crates/krusty-core/src/extensions/wit/since_v0.5.0/: extension.wit
crates/krusty-core/src/extensions/wit/since_v0.6.0/: extension.wit
crates/krusty-core/src/index/: indexer.rs  retrieval.rs
crates/krusty-core/src/lsp/: client.rs  manager.rs
crates/krusty-core/src/plan/: file.rs  mod.rs
crates/krusty-core/src/skills/: manager.rs
crates/krusty-core/src/storage/: agent_state.rs  block_ui.rs  credentials.rs  database.rs  database_tests.rs  file_activity.rs  messages.rs  mod.rs  preferences.rs  sessions.rs
crates/krusty-core/src/tools/: mod.rs  path_utils.rs  registry.rs
crates/krusty-core/src/tools/implementations/: add_subtask.rs  bash.rs  build.rs  edit.rs  explore.rs  glob.rs  grep.rs  mod.rs  search_codebase.rs  set_dependency.rs  task_start.rs  write.rs
crates/krusty-core/src/updater/: checker.rs  mod.rs
docs/: ACP_IMPLEMENTATION_PLAN.md
